<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".ui.auth.ForgotPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_72sdp"
        android:layout_height="@dimen/_72sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/forgot_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/source_sans_pro_bold"
        android:gravity="center"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_24ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/source_sans_pro_regular"
        android:gravity="center"
        android:text="@string/please_enter_your_email_address_we_will_email_you_a_link_to_reset_your_password"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/EditText_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:text="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSend"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:text="@string/send" />

</androidx.appcompat.widget.LinearLayoutCompat>



